2012-12-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * skeleton.MergePool.py Remove SkipBadFiles=True flag (causes undetected event loss!)

2012-12-06 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * AODtoTAG_trf.py Implement event check for inputAODFile and outputTAGFile
    * MergePool_trf.py Implement event check for input and output AOD/ESD files
    * Tagging as PATJobTransforms-00-04-41

2012-12-03 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add --extraignorefilter to LODPK
    * ProdSysDicTools.py Convert %2B to + in tag values returned from panda
    * Tagging as PATJobTransforms-00-04-40

2012-11-26 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Removed NTUP_TOPFJET from all transformations on the request
	  of Kevin Finelli. (Type now merged with NTUP_TOPJET.)
	* Tagging as PATJobTransforms-00-04-39

2012-11-16  Susumu Oda  <Susumu.Oda@cern.ch>
	* adding NTUP_2L2QHSG, NTUP_4LHSG2 to Reco_trf, MergeNTUP_trf 
	* Tagging as PATJobTransforms-00-04-38

2012-11-16  Karsten Koeneke  <karsten.koeneke@cern.ch>
	* scripts/Reco_trf.py (ListOfDefaultPositionalKeys): Adding stream
	* Tagging as PATJobTransforms-00-04-37

2012-11-15 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Allow all single step transform classes to accept the lastInChain parameter and
      pass it on to their parent classes
    * Allow BaseOfBasic and BaseOfComposite to accept the lastInChain parameter
    * Modify Merging_trf, Reco_trf to set lastInChain=False for all substeps
        * Final jobReport.gpickle will be written by parent transform
    * Tagging as PATJobTransforms-00-04-36
    *** Important: From this tag onwards you require RecJobTransforms >= 00-09-13 ***

2012-11-13 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Merge PATJobTransforms-00-04-32-branch:
        * Add eventSelectorQuery and inputTAG_AODFile to Configuration.py
        * Recognise and handle eventSelectorQuery and inputTAG_AODFile in AODtoDPD skeleton